--- a/app/src/main/res/layout/activity_product_finder.xml
+++ b/app/src/main/res/layout/activity_product_finder.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".productFinder">
+    tools:context=".ProductFinder">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,8 +14,8 @@
 
         <Button
             android:id="@+id/backBTNPF"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_gravity="start"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
