--- a/app/src/main/res/layout/activity_bill_cardview.xml
+++ b/app/src/main/res/layout/activity_bill_cardview.xml
@@ -20,33 +20,39 @@
         android:gravity="center">
         <TextView
             android:id="@+id/idProductsBillName"
+            android:layout_weight="4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:text="ProductName"
+            android:gravity="center"
             android:textColor="@color/black"
-            android:textSize="11sp"
+            android:textSize="15sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/idProductsBillQTY"
+            android:layout_weight="2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:drawablePadding="2dp"
             android:text="2"
+            android:gravity="center"
             android:textColor="@color/black"
-            android:textSize="11sp"/>
+            android:textSize="15sp"/>
 
         <TextView
             android:id="@+id/idProductsBillPrice"
+            android:layout_weight="2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:drawablePadding="2dp"
             android:text="2"
+            android:gravity="center"
             android:textColor="@color/black"
-            android:textSize="11sp"/>
+            android:textSize="15sp"/>
 
 
     </LinearLayout>
