--- a/app/src/main/res/layout/activity_products_cardview.xml
+++ b/app/src/main/res/layout/activity_products_cardview.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="50dp"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="5dp"
     app:cardElevation="2dp"
@@ -20,6 +20,7 @@
         android:gravity="center">
         <TextView
             android:id="@+id/idProductsName"
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
@@ -30,10 +31,11 @@
 
         <Button
             android:id="@+id/reduceBTN"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:layout_width="10dp"
+            android:layout_height="28dp"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="-17dp"
+            android:layout_marginTop="-10dp"
             android:background="@drawable/ic_baseline_minimize_24"
             android:backgroundTint="@color/black"
             android:contentDescription="Reduce button here"
@@ -41,18 +43,21 @@
 
         <TextView
             android:id="@+id/idProductsQTY"
+            android:layout_weight="2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:drawablePadding="2dp"
             android:text="2"
+            android:gravity="center"
             android:textColor="@color/black"
-            android:textSize="11sp"/>
+            android:textSize="15sp"/>
 
         <Button
             android:id="@+id/increaseBTN"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:layout_width="10dp"
+            android:layout_height="28dp"
             android:layout_marginStart="15dp"
             android:background="@drawable/ic_plus_24px"
             android:backgroundTint="@color/black"
@@ -61,8 +66,9 @@
 
         <Button
             android:id="@+id/productsDeleteBTN"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:layout_width="10dp"
+            android:layout_height="28dp"
             android:layout_marginStart="30dp"
             android:background="@drawable/ic_baseline_delete_24"
             android:backgroundTint="#FC0000"
