--- a/app/src/main/res/layout/activity_token_dashboard.xml
+++ b/app/src/main/res/layout/activity_token_dashboard.xml
@@ -123,17 +123,7 @@
 
 
         </LinearLayout>
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:fontFamily="@font/lexend_exa"
-            android:gravity="center|center_horizontal"
-            android:text="Products"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="500dp"
@@ -150,6 +140,7 @@
             android:layout_margin="5dp">
             <TextView
                 android:id="@+id/textView7"
+                android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -157,12 +148,13 @@
                 android:layout_marginStart="40dp"
                 android:fontFamily="@font/lexend_exa"
                 android:gravity="center|center_horizontal"
-                android:text="Products            "
+                android:text="Products"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 />
             <TextView
                 android:id="@+id/textView77"
+                android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
