--- a/app/src/main/res/layout/activity_product_finder.xml
+++ b/app/src/main/res/layout/activity_product_finder.xml
@@ -79,16 +79,17 @@
             android:hint="Please add the Product ID"
             android:textColorHint="@color/white"/>
 
-        <TextView
-            android:id="@+id/finderResult"
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|center_horizontal|center_vertical"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/lexend_exa"
-            android:gravity="center|center_horizontal"
-            android:textColor="@color/black"
-            android:textSize="14sp" />
+        <EditText
+            android:id="@+id/prouctNamePF"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_margin="20dp"
+            android:background="@drawable/recyler_back"
+            android:textAlignment="center"
+            android:hint="Please add the Product Name"
+            android:textColorHint="@color/white"/>
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -98,23 +99,12 @@
             android:layout_gravity="bottom">
 
             <Button
-                android:id="@+id/findPFBTN"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_margin="10dp"
-                android:backgroundTint="@color/grey"
-                android:text="Find"
-                android:textSize="24dp"
-                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-
-            <Button
                 android:id="@+id/nextPFBTN"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/denim_blue"
                 android:layout_weight="1"
                 android:layout_margin="10dp"
-                android:backgroundTint="@color/grey"
                 android:text="next"
                 android:textSize="24dp"
                 tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
