--- a/app/src/main/res/layout/activity_token_dashboard.xml
+++ b/app/src/main/res/layout/activity_token_dashboard.xml
@@ -8,8 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/backButtonTokenNumber"
@@ -24,18 +24,18 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_gravity="center|top"
+            android:layout_marginTop="-77dp"
             android:gravity="top|center"
-            android:layout_marginTop="-77dp">
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:layout_marginTop="80dp"
-                android:layout_marginStart="30dp"
                 android:layout_gravity="top|center_horizontal"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="80dp"
                 android:src="@drawable/logo" />
 
             <LinearLayout
@@ -53,8 +53,7 @@
                     android:gravity="center|center_horizontal"
                     android:text="User"
                     android:textColor="@color/black"
-                    android:textSize="18sp"
-                    />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/userCurrentTokenNo"
@@ -66,123 +65,139 @@
                     android:gravity="center|center_horizontal"
                     android:text="token no 2222"
                     android:textColor="@color/black"
-                    android:textSize="14sp"
-                    />
+                    android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
 
-        <TextView
-          android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|center_horizontal|center_vertical"
-            android:layout_marginTop="5dp"
-            android:fontFamily="@font/lexend_exa"
-            android:gravity="center|center_horizontal"
-            android:text="Add Product By"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center"
-            android:gravity="center">
+            android:layout_gravity="end"
+            android:layout_marginEnd="20dp"
+            android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/barcodeBTN"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/grey"
-                android:text="Barcode"
-                android:textSize="14dp"
-
-                android:layout_marginTop="5dp"
-                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-            <Button
-                android:id="@+id/scanBTN"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/grey"
-                android:text="Scan"
-                android:textSize="14dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="5dp"
-                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
             <Button
                 android:id="@+id/nameBTN"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/grey"
-                android:text="name"
-                android:textSize="14dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="5dp"
+                android:backgroundTint="@color/grey"
+                android:text="+ Add Product"
+                android:textSize="14dp"
                 tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
 
         </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_margin="10dp"
-        android:orientation="vertical"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/recyler_back"
-        android:layout_gravity="center"
-        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/recyler_back"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="5dp"
+                    android:layout_marginStart="40dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/lexend_exa"
+                    android:gravity="center|center_horizontal"
+                    android:text="Products"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/textView77"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/lexend_exa"
+                    android:gravity="center|center_horizontal"
+                    android:text="QTY"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/idRVCourse"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp" />
+
+
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/prouctReasonPF"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_margin="20dp"
+            android:background="@drawable/recyler_back"
+            android:hint="Please add the Reason"
+            android:textAlignment="center"
+            android:textColorHint="@color/white" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_margin="5dp">
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="5dp"
-                android:layout_marginStart="40dp"
-                android:fontFamily="@font/lexend_exa"
-                android:gravity="center|center_horizontal"
-                android:text="Products"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                />
-            <TextView
-                android:id="@+id/textView77"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_margin="10dp"
-                android:fontFamily="@font/lexend_exa"
-                android:gravity="center|center_horizontal"
-                android:text="QTY"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                />
+            android:orientation="horizontal">
 
+            <Switch
+                android:id="@+id/InquirySW"
+                android:layout_width="wrap_content"
+                android:layout_height="58dp"
+                android:layout_weight="1"
+                android:padding="5dp"
+                android:scaleX="1.0"
+                android:scaleY="1.0"
+                android:switchMinWidth="40dp"
+                android:text="Inquired"
+                android:textAlignment="center"
+                android:textColor="#696969"
+                android:textSize="20sp" />
+
+            <Switch
+                android:id="@+id/PurchasedSW"
+                android:layout_width="wrap_content"
+                android:layout_height="58dp"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"
+                android:padding="5dp"
+                android:scaleX="1.0"
+                android:scaleY="1.0"
+                android:switchMinWidth="40dp"
+                android:text="Purchase"
+                android:textAlignment="center"
+                android:textColor="#696969"
+                android:textSize="20sp" />
         </LinearLayout>
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/idRVCourse"
-            android:layout_width="match_parent"
-            android:layout_margin="5dp"
-            android:layout_height="match_parent" />
 
-    </LinearLayout>
         <Button
             android:id="@+id/nextToDaBTN"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/grey"
             android:layout_gravity="center"
-            android:text="next"
-            android:textSize="24dp"
             android:layout_marginTop="5dp"
+            android:backgroundTint="@color/denim_blue"
+            android:text="Submit"
+            android:textSize="24dp"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
     </LinearLayout>
