--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".Dashboard"
-    >
+    tools:context=".Dashboard">
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
@@ -70,6 +69,80 @@
             app:layout_constraintTop_toBottomOf="@+id/toolbarHere"
             app:srcCompat="@drawable/icon1" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="700dp"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/recyler_back"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView4">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp">
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="5dp"
+                    android:layout_marginStart="40dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/lexend_exa"
+                    android:gravity="center|center_horizontal"
+                    android:text="No"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/textView77"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="5dp"
+                    android:layout_marginStart="40dp"
+                    android:layout_weight="2"
+                    android:fontFamily="@font/lexend_exa"
+                    android:gravity="center|center_horizontal"
+                    android:text="Username"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
+                <TextView
+                    android:id="@+id/textView87"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="5dp"
+                    android:layout_marginStart="40dp"
+                    android:layout_weight="2"
+                    android:fontFamily="@font/lexend_exa"
+                    android:gravity="center|center_horizontal"
+                    android:text="Day"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
+
+            </LinearLayout>
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/idInquiryRV"
+                android:layout_width="match_parent"
+                android:layout_height="600dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginBottom="15dp"
+                android:paddingBottom="70dp"/>
+        </LinearLayout>
+
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/addTokenbtn"
             android:layout_width="wrap_content"
@@ -110,7 +183,7 @@
                 android:layout_marginLeft="40dp"
                 android:layout_marginTop="30dp"
                 android:fontFamily="@font/lexend_exa"
-                android:text="Total Sales -"
+                android:text="Total -"
                 android:textColor="#FFFCFC"
                 android:textSize="20sp" />
 
@@ -121,7 +194,7 @@
                 android:layout_marginLeft="40dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/lexend_exa"
-                android:text="Today's Sale -"
+                android:text=""
                 android:textColor="#FFFCFC"
                 android:textSize="20sp" />
         </LinearLayout>
