--- a/app/src/main/res/layout/activity_token_dashboard.xml
+++ b/app/src/main/res/layout/activity_token_dashboard.xml
@@ -153,6 +153,17 @@
             android:hint="Please add the Reason"
             android:textAlignment="center"
             android:textColorHint="@color/white" />
+        <Button
+            android:id="@+id/InquiryDate"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:textColor="@color/denim_blue"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:textSize="15dp"
+            android:text="Date"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
